--- a/vercel.json
+++ b/vercel.json
@@ -16,10 +16,5 @@
       "maxDuration": 30
     }
   },
-  "regions": ["iad1"],
-  "build": {
-    "env": {
-      "PYTHONPATH": "."
-    }
-  }
+  "regions": ["iad1"]
 }
